--- a/HelloWorld/HelloWorld2/HelloWorld2/Base.lproj/Main.storyboard
+++ b/HelloWorld/HelloWorld2/HelloWorld2/Base.lproj/Main.storyboard
@@ -25,16 +25,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="21110905.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="YRG-Ga-dVq">
-                                <rect key="frame" x="202" y="893" width="450" height="468"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EKs-Gs-bkA">
                                 <rect key="frame" x="372" y="711" width="56" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="隠す"/>
                                 <connections>
-                                    <action selector="kakusu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d5o-2p-aBy"/>
+                                    <action selector="kakusu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y9Z-dc-JKC"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mre-gE-K6j">
@@ -42,7 +38,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="表示"/>
                                 <connections>
-                                    <action selector="hyouji:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BEW-50-xtg"/>
+                                    <action selector="hyouji:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1ml-YP-udv"/>
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="21110905.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="e0h-Oe-i3N">
@@ -54,8 +50,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="kakusu" destination="8bC-Xf-vdC" id="IVC-aP-qSs"/>
-                        <outlet property="mainImage" destination="e0h-Oe-i3N" id="RRQ-Rv-G15"/>
+                        <outlet property="HelloWorld" destination="Ldd-y8-Z8B" id="hhB-Qf-fHS"/>
+                        <outlet property="mainImage" destination="e0h-Oe-i3N" id="P4A-Cg-eVh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
